# Oracle

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  HACKATHON_SUBMISSION.md  README.md  deploy-final.ps1  deploy-now.bat  deploy-wsl-complete.sh  deploy-wsl-final.sh  deploy-wsl.sh  deployed-config.json  env.example  fix-linker.ps1  fix-rust-automatic.ps1  fix-rust-final.ps1  fix-rust-simple.ps1  fix-visual-studio.ps1  governance-keypair.json  install-and-deploy.bat  install-and-deploy.ps1  install-build-tools.ps1  oracle-deployment-verification.json  oraculo-keypair.json  package.json  pnpm-lock.yaml  protocol-config.json  quick-fix.ps1  real-deployment-config.json  real-markets.json  real-protocol-config.json  simple-fix.ps1  solana-config.yml  vercel.json  verify-build-tools.ps1  wallet-keypair.json
app/: CANVAS_RADIUS_FIX.md  HYDRATION_SOLUTION.md  NEURAL_EFFECTS_DOCUMENTATION.md  env.local  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
programs/governance-token/: Cargo.toml
programs/governance-token/src/: lib.rs
programs/oraculo/: Cargo.toml
programs/oraculo/src/: errors.rs  lib.rs  utils.rs
programs/oraculo/src/instructions/: claim_winnings.rs  create_market.rs  execute_resolution.rs  initialize.rs  mod.rs  place_bet.rs  propose_resolution.rs  vote_resolution.rs
programs/oraculo/src/state/: config.rs  market.rs  mod.rs  proposal.rs
scripts/: deploy.ts  initialize-protocol.ts  initialize-real-protocol.ts  seed-markets.ts
tests/: oraculo.test.ts
(+41 files in other folders)
