[package]
name = "governance-token"
version = "0.1.0"
description = "Governance token for Oráculo DAO"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bincode = "1.3.3"
