[package]
name = "oraculo"
version = "0.1.0"
description = "Permissionless prediction markets with DAO-as-oracle on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oraculo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bincode = "1.3.3"

# [dev-dependencies]
# solana-program-test = "~1.17.0"
